maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:6: error: not found: value marcheNord
      case 0 => marcheNord(); etat = 1;
                ^