maze.island.IslandMaze.scala.code
override def run() {
  var etat = 0;
  while(!estSurBiscuit() && getX() != 0){
    etat match {
      case 0 => marcheNord(); etat = 1;
      
      case 1 => run2(); etat = 0;
      
      case _ => ();
    }
  }
  prendBiscuit();
}

def run2(){
  while(!estSurBiscuit()){
    fun();
  }
}

def fun(){
  gauche();
  while(estFaceMur())
  {
    droite();
  }
  avance();
}